package com.iting.jobportal.userprofile.entity.enums;

public enum CvStatus {
    UPLOADED, PROCESSING, ACTIVE, INACTIVE, FAILED
}
