package com.iting.jobportal.userprofile.entity.enums;

public enum EmploymentStatus {
    ACTIVELY_LOOKING, // đang tìm việc tích cực
    OPEN_TO_OPPORTUNITIES, // sẵn sàng nhận cơ hội
    NOT_LOOKING, // chưa có nhu cầu
    FREELANCE_AVAILABLE // sẵn sàng freelance
}
