package com.iting.jobportal.userprofile.entity.enums;

public enum SocialPlatform {
    LINKEDIN,
    GITHUB,
    PORTFOLIO,
    TWITTER
}